syntax = "proto3";

package negotiation_agent.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";
import "models.proto";

service NegotiationAgentAgreementsService {
  rpc GetAllAgreements (GetAllAgreementsRequest) returns (AgreementListResponse);
  rpc GetBatchAgreements (GetBatchAgreementsRequest) returns (AgreementListResponse);
  rpc GetAgreementById (GetAgreementByIdRequest) returns (AgreementResponse);
  rpc GetAgreementByNegotiationProcess (GetAgreementByNegotiationProcessRequest) returns (AgreementResponse);
  rpc GetAgreementByNegotiationMessage (GetAgreementByNegotiationMessageRequest) returns (AgreementResponse);
  rpc CreateAgreement (CreateAgreementRequest) returns (AgreementResponse);
  rpc PutAgreement (PutAgreementRequest) returns (AgreementResponse);
  rpc DeleteAgreement (DeleteAgreementRequest) returns (google.protobuf.Empty);
}

message GetAllAgreementsRequest {
  optional uint64 limit = 1;
  optional uint64 page = 2;
}

message GetBatchAgreementsRequest {
  repeated string ids = 1;
}

message GetAgreementByIdRequest {
  string id = 1;
}

message GetAgreementByNegotiationProcessRequest {
  string process_id = 1;
}

message GetAgreementByNegotiationMessageRequest {
  string message_id = 1;
}

message CreateAgreementRequest {
  optional string id = 1;
  string negotiation_agent_process_id = 2;
  string negotiation_agent_message_id = 3;
  string consumer_participant_id = 4;
  string provider_participant_id = 5;
  google.protobuf.Struct agreement_content = 6;
  string target = 7;
}

message PutAgreementRequest {
  string id = 1;
  optional string state = 2;
}

message DeleteAgreementRequest {
  string id = 1;
}

message AgreementListResponse {
  repeated Agreement agreements = 1;
}

message AgreementResponse {
  Agreement agreement = 1;
}